deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zhm-react
  namespace: szhems
  labels:
    app: zhm-react
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zhm-react
  template:
    metadata:
      labels:
        app: zhm-react
    spec:
      containers:
        - name: zhm-react
          image: 10.101.7.108:80/szhems_demo_prod/zhm-react:v1.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: zhm-react
  namespace: szhems
  labels:
    name: zhm-react
spec:
  ports:
    - name: api
      port: 8889
      targetPort: 80
  selector:
    app: zhm-react
