ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zhm-react
  namespace: szhems
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
spec:
  ingressClassName: nginx
  rules:
    - host: ""
      http:
        paths:
          - path: /zhm-react
            pathType: Prefix
            backend:
              service:
                name: zhm-react
                port:
                  number: 8889
